--- a/pyscheduler.service
+++ b/pyscheduler.service
@@ -8,7 +8,7 @@ Type=simple
 Restart=always
 RestartSec=1
 User=root
-ExecStart=python3 run.py
+ExecStart=/root/miniconda3/bin/python3 run.py
 
 [Install]
 WantedBy=multi-user.target
