--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 PSQL_URI=postgres:postgres@localhost:5432/scheduler
 BASE_FOLDER="/Users/jguese/code/tradingbot22-tradingbots/"
 PYTHON_PATH="/Users/jguese/miniconda3/envs/tradingbot/bin/python3"
+# optional slack notifications
+SLACK_ON_ERROR=False
+SLACK_WEBHOOK_URL=
