--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requests = "^2.31.0"
 psycopg2-binary = "^2.9.9"
 croniter = "^2.0.1"
 python-dotenv = "^1.0.0"
+slack-sdk = "^3.23.0"
 
 
 [build-system]
